--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ui-components",
-  "version": "1.0.0",
+  "name": "@sandercamp/ui-components-test",
+  "version": "0.0.1",
   "packageManager": "yarn@4.0.0-rc.50",
-  "private": true,
+  "private": false,
   "author": "Sander Camp",
   "license": "MIT",
   "devDependencies": {
@@ -19,15 +19,17 @@
     "@storybook/react": "^7.3.2",
     "@storybook/react-webpack5": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
+    "@types/css-modules": "^1.0.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
     "classnames": "^2.3.2",
+    "css-loader": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-movable": "^3.0.4",
     "storybook": "^7.3.2",
-    "ts-loader": "^9.4.4",
+    "style-loader": "^3.3.3",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
@@ -37,7 +39,7 @@
   },
   "scripts": {
     "start": "yarn storybook",
-    "build": "webpack",
+    "build": "webpack --config webpack.config.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   }
