--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "@sandercamp/ui-components-test",
-  "version": "0.0.6",
+  "name": "@sandercamp/ui-components",
+  "version": "0.0.3",
   "packageManager": "yarn@4.0.0-rc.50",
-  "main": "./dist/index.js",
+  "main": "./lib/index.js",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./lib/index.js"
   },
+  "files": [
+    "lib/**/*",
+    "src/**/*"
+  ],
   "author": "Sander Camp",
   "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.11",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-terser": "^0.4.3",
+  "dependencies": {
     "@storybook/addon-docs": "^7.3.2",
     "@storybook/addon-essentials": "^7.3.2",
     "@storybook/addon-interactions": "^7.3.2",
@@ -26,34 +22,40 @@
     "@storybook/react": "^7.3.2",
     "@storybook/react-webpack5": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
+    "@szhsin/react-menu": "^4.0.3",
+    "classnames": "^2.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-movable": "^3.0.4",
+    "storybook": "^7.3.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.11",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.3",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/css-modules": "^1.0.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/rollup-plugin-peer-deps-external": "^2",
-    "classnames": "^2.3.2",
     "postcss": "^8.4.28",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-movable": "^3.0.4",
     "rollup": "^3.28.1",
     "rollup-plugin-css-porter": "^1.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "storybook": "^7.3.2",
     "typescript": "^5.2.2"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0"
   },
   "scripts": {
     "start": "yarn storybook",
     "build": "rollup -c",
+    "publish": "npm publish --access public",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "@szhsin/react-menu": "^4.0.3"
   }
 }
