Add access modifier for npm publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
           scope: '@sandercamp'
       - run: yarn
-      - run: yarn npm publish
+      - run: yarn npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
