--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@sandercamp/ui-components",
   "author": "Sander Camp",
   "license": "MIT",
-  "version": "0.0.6",
+  "version": "0.0.12",
   "packageManager": "yarn@4.0.0-rc.50",
   "main": "./lib/index.js",
   "exports": {
@@ -38,6 +38,7 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/css-modules": "^1.0.2",
@@ -45,10 +46,12 @@
     "@types/react-dom": "^18.2.7",
     "@types/rollup-plugin-peer-deps-external": "^2",
     "postcss": "^8.4.28",
+    "postcss-import": "^15.1.0",
     "rollup": "^3.28.1",
     "rollup-plugin-css-porter": "^1.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
   "scripts": {
