--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@sandercamp/ui-components",
   "author": "Sander Camp",
   "license": "MIT",
-  "version": "0.0.12",
+  "version": "0.0.13",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sandercamp/ui-components.git"
+  },
   "packageManager": "yarn@4.0.0-rc.50",
   "main": "./lib/index.js",
   "exports": {
