--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          registry-url: https://registry.npmjs.org/
+          registry-url: //registry.npmjs.org/
       - name: Publish to NPMJS
         run: |
           yarn build
-          npm config set //registry.npmjs.org/:_auth=$NODE_AUTH_TOKEN
-          npm config list
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
