--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,8 +17,6 @@ jobs:
           node-version: "20.x"
           registry-url: https://registry.npmjs.org/
       - name: Publish to NPMJS
-        run: |
-          yarn build
-          npm publish --access public
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
