--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
+          # node-version 20.6 breaks the build, babel needs to catch up.
+          # https://github.com/angular/angular-cli/issues/25782
+          node-version: "20.5"
           registry-url: https://registry.npmjs.org/
       - name: Publish to NPMJS
         run: npm publish --access public
