--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,11 @@
         "react",
         "prettier"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "rules": {
         "prettier/prettier": "error",
         "@typescript-eslint/explicit-module-boundary-types": "off",
