--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,13 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# ESLint is a tool for identifying and reporting on patterns
-# found in ECMAScript/JavaScript code.
-# More details at https://github.com/eslint/eslint
-# and https://eslint.org
-
-name: ESLint
+name: ESLint static analysis
 
 on:
   push:
@@ -19,22 +10,14 @@ on:
 
 jobs:
   eslint:
-    name: Run eslint scanning
+    name: Run ESLint static analysis
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      security-events: write
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Install ESLint
-        run: |
-          npm install eslint@8.10.0
-
+      - name: Install dependencies
+        run: yarn
       - name: Run ESLint
-        run: npx eslint .
+        run: yarn run eslint .
           --config .eslintrc.json
           --ext .js,.jsx,.ts,.tsx
-        continue-on-error: true
