--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,14 +12,23 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    env:
+      CI_COMMIT_AUTHOR: Continuous Integration
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           registry-url: https://registry.npmjs.org/
+
+      # Update the package version
       - if: ${{ github.event_name == 'push' }}
         name: Bump version
-        run: npm version prepatch && git push && git push --tags
+        run: |
+          npm version prepatch
+          git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+          git config --global user.email "username@users.noreply.github.com"
+          git push
+          git push --tags
       - name: Publish to NPMJS
         run: npm publish --access public
         env:
