--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,14 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI_COMMIT_AUTHOR: Continuous Integration
-    permissions: write-all
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           registry-url: https://registry.npmjs.org/
 
-      # Update the package version
+      # Update the package version automatically when this workflow is triggered manually
       - if: ${{ github.event_name == 'push' }}
         name: Bump version
         run: |
