Set trigger to workflow_dispatch

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,6 @@
 name: Publish package to npmjs
 
 on:
-  push:
   workflow_dispatch:
   release:
     types: [created]
@@ -23,7 +22,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       # Update the package version automatically when this workflow is triggered manually
-      - if: ${{ github.event_name == 'push' }}
+      - if: ${{ github.event_name == 'workflow_dispatch' }}
         name: Bump version
         run: |
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
