--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/testing-library": "^0.2.0",
     "@szhsin/react-menu": "^4.0.3",
     "classnames": "^2.3.2",
+    "postcss-url": "^10.1.3",
     "react-movable": "^3.0.4",
     "storybook": "^7.3.2"
   },
@@ -43,6 +44,7 @@
     "@types/babel__preset-env": "^7",
     "@types/css-modules": "^1.0.2",
     "@types/eslint": "^8",
+    "@types/postcss-url": "^10",
     "@types/prettier": "^3",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
